Added Fact Caching

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,6 +3,9 @@ inventory = inventory
 deprecation_warnings = false
 pipelining = true
 
+fact_caching = jsonfile
+fact_caching_connection = facts
+
 [ssh_connection]
 transport=ssh
 ssh_args= -F ssh.config -o ControlMaster=auto -o ControlPersist=60s -o PreferredAuthentications=publickey
